# NSFW

./: LICENSE  README.md  build_windows.bat  cve-2021-34527.py  main.txt
.github/: azure_devops.yml  blufire.yml  example.yml  gumi_df.yml  main.yml  netsharingfilelesswiper.txt  workflow.yml
core/: CMakeLists.txt  beta.cpp  build_sfx.ps1  compile.bat  cpp.hint  diskcryptor_loader.ps1  diskcryptor_malicious_stub.cpp  dll_load.cpp  dllmain.cpp  dropper.ps1  injection.cpp  injection.h  loader.ps1  main.cpp  malapi.py  nightmare_stub.ps1  nsfw.cpp  nsfw.sln  nsfw.vcxproj  nsfw.vcxproj.filters  proc_injection.cpp  ransom_note.txt  readme.md  regsvr32_loader.sct  shortcut_creator.vbs  spoolfool.ps1  win11.h
core/azure/: ai_ml.txt  az.sh  azure-pipelines.yml  azure_infra.py  bluefire.sh  bluefire.yml  poly_core.py  requirements.txt
core/azure/function_app/: _init_.py  polymorph_core.py
core/azure/function_app/src/: payload.cpp
core/mutant/: advanced.c  poly.cpp  polyv2.cpp
core/nightmare/: dll_inject.cpp  dllmain.cpp  main.cpp  nightmare.vcxproj  nsfw.cpp  nsfw.h
core/nightmare/include/: data_wipe.h  misc.h
core/src/: data_wiper.cpp  nsfw.cpp  nsfw.cs  nsfw.h
defense/: hardsetup.md  lab_commands.txt  readme.md  sysmon-config.xml
docs/: README_NSFW.md  dorks.md  dorks_list.txt  index.md  moberly_fileless_chain.md  moberly_fileless_chain.yml  nsfw_caldera_operation.yml  nsfw_fileless_chain.md  nsfw_fileless_chain.yml  print_dorks.yml
dropper/: auto_chck.ps1  cve_dump.txt  dropper.ps1  lolbin_dump.txt  note.md  tv_cve_list.txt  worm-exploit.ps1  worm_print.ps1
(+22 files in other folders)
